--- a/style.css
+++ b/style.css
@@ -4,5 +4,12 @@
     overflow-x: hidden;
 }
 
+.game {
+    width: 500px;
+    height: 200px;
+    border: 1px solid black;
+    margin: auto;
+}
+
 
 
