--- a/style.css
+++ b/style.css
@@ -25,5 +25,23 @@
     animation: jump 0.6s linear;
 }
 
+@keyframes jump {
+    0% {
+        top: 150px;
+    }
+
+
+
+    40% {
+        top: 100px;
+    }
+
+
+
+    100% {
+        top: 150px;
+    }
+}
+
 
 
