Improved the keyframes and made the animation smoother

--- a/style.css
+++ b/style.css
@@ -30,13 +30,21 @@
         top: 150px;
     }
 
-
+    20% {
+        top: 120px;
+    }
 
     40% {
         top: 100px;
     }
 
+    60% {
+        top: 100px;
+    }
 
+    80% {
+        top: 120px;
+    }
 
     100% {
         top: 150px;
