Defined the custom logic of the 2nd animation

--- a/style.css
+++ b/style.css
@@ -63,6 +63,17 @@
     animation: block 2s infinite linear;
 }
 
+@keyframes block {
+    0% {
+        left: 500px
+    }
+
+    100% {
+        left: -20px
+    }
+}
+
+
 
 
 
