--- a/style.css
+++ b/style.css
@@ -73,6 +73,18 @@
     }
 }
 
+p {
+    text-align: center;
+    margin: 5px auto;
+    padding: 5px 10px;
+    width: fit-content;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: 900;
+    font-family: 'Prototype';
+}
+
 
 
 
