--- a/style.css
+++ b/style.css
@@ -85,6 +85,15 @@ p {
     font-family: 'Prototype';
 }
 
+html,
+body {
+    height: 100%;
+    width: 100%;
+}
+
+/* .paused {
+    animation-play-state: paused;
+} */
 
 
 
