Styled the wrapper for the end screen

--- a/style.css
+++ b/style.css
@@ -95,6 +95,14 @@ body {
     animation-play-state: paused;
 } */
 
-
+.final-wrap {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: antiquewhite;
+}
 
 
