--- a/style.css
+++ b/style.css
@@ -119,3 +119,11 @@ body {
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
+.new-game-btn:hover {
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.75);
+    transform: translateY(-2px);
+    background: lightblue;
+    cursor: pointer;
+    border: 3px solid gray;
+    border-radius: 15px;
+}
